# ccensus

./: .gitignore  CMakeLists.txt  LICENSE  LinesOfCode.sln  LinesOfCode.vcxproj  LinesOfCode.vcxproj.filters  README.md  design.md  main.cpp  output.txt  project.cpp  project.h  solution.h
.github/workflows/: build.yml
TestData/: TestData.sln  TestData.vcxproj  main.cpp
TestProjects/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: backend.h  cmake.h  count.h  data.h  diff.h  display_utils.h  lib.h  project.h  solution.h  utils.h  visual_studio_frontend.h
lib/src/: backend.cpp  cmake.cpp  count.cpp  data.cpp  diff.cpp  lib.cpp  project.cpp  solution.cpp  visual_studio_frontend.cpp
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  clip-file.py  expected-poco-11.json  expected-poco-12.json  expected-poco-13.json  expected-poco-14.json  test.bat
